--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bizhive-refactor-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>BizHive - Gestión Inteligente de Inventarios Multitenant | SaaS para Negocios</title>
+    <meta name="description" content="BizHive es la plataforma SaaS líder para gestionar inventarios de múltiples sucursales. Organiza tu colmena de negocios con eficiencia, sin confusiones entre inventarios." />
+    <meta name="keywords" content="gestión inventarios, SaaS multitenant, control sucursales, inventario en tiempo real, software negocios, BizHive" />
+    <meta name="author" content="BizHive" />
 
-    <meta property="og:title" content="bizhive-refactor-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="BizHive - Gestión Inteligente de Inventarios para Múltiples Sucursales" />
+    <meta property="og:description" content="Plataforma SaaS multitenant que ayuda a gestionar inventarios de negocios sin confusiones. Cada sucursal en su propio panal, organizados con eficiencia." />
+    <meta property="og:image" content="https://bizhive.com/og-image.jpg" />
+    <meta property="og:url" content="https://bizhive.com" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="BizHive - Gestión Inteligente de Inventarios Multitenant" />
+    <meta name="twitter:description" content="Organiza tu colmena de negocios con la plataforma SaaS más eficiente para gestión de inventarios." />
+    <meta name="twitter:image" content="https://bizhive.com/twitter-image.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://bizhive.com" />
+    
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
 
   <body>
